# bld_iotty_linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  iottyConfig.cmake  iotty_version.c.in  iotty_version.h  makefile
